<resources>
    <string name="app_name">MoviesApp</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="sample_title">Shivam Gupta - The Movie</string>
    <string name="release_date_heading">Release Date :</string>
    <string name="release_date">1992-01-19</string>
    <string name="voting_average_heading">Voting Average :</string>
    <string name="voting_average">9.8</string>
    <string name="original_language_heading">Language :</string>
    <string name="original_language">EN</string>
    <string name="overview_heading">Overview :</string>
    <string name="trailer_heading">Trailer :</string>
    <string name="trailer_text">Tap here!</string>
    <string name="overview">Shivam Gupta, a graduate from the University of Illinois, moved to the Bay Area in search of something that cannot be explained by any rational being. Will he find it or will continue live a life of a nomad is what this award-winning movie is about.</string>
    <string name="movie_parcel">MOVIE_PARCEL</string>
    <string name="movie_trailer_parcel">MOVIE_TRAILER_PARCEL</string>
    <string name="need_internet_error">This app needs internet!</string>
    <string name="tmdb_sort_by_tag">SORT_METHOD</string>
    <string name="pref_sort_popular_tag">SORT_POPULAR</string>
    <string name="pref_sort_vote_avg_tag">SORT_VOTE_AVERAGE</string>
    <string name="tmdb_sort_by_popularity">popularity</string>
    <string name="tmdb_sort_by_vote_average">vote_average</string>
    <string name="favorite_tag">FAVORITE MOVIE</string>
    <string name="unfavorite_tag">UNFAVORITE MOVIE</string>
</resources>
