<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.moviesapp.MovieDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="1dp"
            android:text="@string/sample_title"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/poster_imageview"
            android:layout_width="@dimen/poster_w185_width"
            android:layout_height="@dimen/poster_w185_height"
            android:layout_gravity="center"
            android:src="@drawable/movie" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/trailer_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/trailer_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/trailer_link_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="goToVideo"
                android:paddingLeft="10dp"
                android:text="@string/trailer_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/release_date_heading_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/release_date_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/release_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/release_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/voting_average_heading_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/voting_average_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/voting_average_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/voting_average"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/original_laguage_heading_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/original_language_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/original_laguage_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/original_language"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/abc_text_size_medium_material" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/overview_heading_textview"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/overview_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="110dp">

                <TextView
                    android:id="@+id/overview_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:text="@string/overview"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </android.support.v4.widget.NestedScrollView >
        </LinearLayout>
    </LinearLayout>
</ScrollView>
